fix logout spacing on navbar

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -30,6 +30,11 @@
     background: #FFFFFF;
 
 }
+
+.navbar-right {
+  margin-right: 0px;
+}
+
 .brand {
     position: absolute;
     left: 50%;
